Bug 305861 - Rekonq doesn't load images when Ad Block is enabled
Summary: Rekonq doesn't load images when Ad Block is enabled
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-27 09:13 UTC by naraesk
Modified: 2012-10-14 10:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Fix hiding elements if abdlock enabled (976 bytes, patch)
2012-10-09 10:40 UTC, vic
Details
taz.de with adblock disabled (249.95 KB, image/png)
2012-10-14 08:40 UTC, Andrea Diamantini
Details
taz.de with adblock enabled (243.14 KB, image/png)
2012-10-14 08:46 UTC, Andrea Diamantini
Details
taz.de with adblock enabled [bug] (227.14 KB, image/png)
2012-10-14 08:49 UTC, naraesk
Details

Note You need to log in before you can comment on or make changes to this bug.
Description naraesk 2012-08-27 09:13:50 UTC
On many websites rekonq doesn't load all the images. I don't talk about the advertisment, but the "normal" images. The behaviour seems to be influenced by Ad Block.

Reproducible: Always

Steps to Reproduce:
1. Enable Adblock (doest matter whitch list is selected)
2. Disable Ad Block
Actual Results:  
In the first case (step 1), most of the images of websites (e.g. www.taz.de) are not shown. Even when all lists are deselected this happens. So I don't think this is a problem of a to restrictive list.

Expected Results:  
In the second case (step 2) all images are shown as expected.
Comment 1 vic 2012-10-09 10:40:03 UTC
Created attachment 74443 [details]
Fix hiding elements if abdlock enabled

Bug: blacklisted host mixed with the relative src of element, which is normal, and this element also hided.
Comment 2 Andrea Diamantini 2012-10-14 08:39:30 UTC
(In reply to comment #1)
> Created attachment 74443 [details]
> Fix hiding elements if abdlock enabled
> 
> Bug: blacklisted host mixed with the relative src of element, which is
> normal, and this element also hided.

vic, thanks for the patch. I'm going to test it and eventually merge for rekonq 1.x and 2.x
Comment 3 Andrea Diamantini 2012-10-14 08:40:20 UTC
This is what happens here WITHOUT the patch: is it working for me? I guess so.
Comment 4 Andrea Diamantini 2012-10-14 08:40:51 UTC
Created attachment 74532 [details]
taz.de with adblock disabled
Comment 5 Andrea Diamantini 2012-10-14 08:46:00 UTC
Created attachment 74533 [details]
taz.de with adblock enabled
Comment 6 naraesk 2012-10-14 08:49:38 UTC
Created attachment 74534 [details]
taz.de with adblock enabled [bug]
Comment 7 naraesk 2012-10-14 08:58:09 UTC
Your screenshot with adblock enabled is the expected result. I guess you see the difference to my screenshot.
Comment 8 Andrea Diamantini 2012-10-14 10:09:04 UTC
Git commit 6a410a5e63715fbdc6e82c7e8a0540278fb158d7 by Andrea Diamantini.
Committed on 14/10/2012 at 12:12.
Pushed by adjam into branch 'master'.

Faster html elements check and better address resolution

This "should" fix some strange adblock behaviour on image hiding.
Needs testing

Patch courtesy by "vic". Thanks :)
PS: will be applied to rekonq2, too.

M  +2    -3    src/adblock/adblockmanager.cpp

http://commits.kde.org/rekonq/6a410a5e63715fbdc6e82c7e8a0540278fb158d7