Faster html elements check and better address resolution

This "should" fix some strange adblock behaviour on image hiding.
Needs testing

Patch courtesy by "vic". Thanks :)
PS: will be applied to rekonq2, too.
BUG:305861